# GeoViewer---QGIS-example

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  README.md
GeoViewer/: mapwidget.h
GeoViewer/common/: geodatacontainer.h  geounitmanager.h  mapenums.h  mapstructures.h
GeoViewer/components/: geobrowsercomponent.h  geocomponent.h  geolayerscomponent.h
GeoViewer/items/: geocolorizepathitem.h  geoitem.h  geomarkeritem.h  geomultipositionItem.h  geosectoritem.h  geosimplemarkeritem.h  geotextitem.h
GeoViewer/tools/: geo2positionitemtool.h  geomeasuretool.h  geomultipositiontool.h
GeoViewer/widgets/: geomapcanvas.h
qgis/: qgsbrowserlayerpropertiesbase.ui  qgsxyzconnectiondialog.cpp  qgsxyzconnectiondialog.h  qgsxyzconnectiondialog.ui
src/: mapwidget.cpp
src/common/: geodatacontainer.cpp  geounitmanager.cpp
src/components/: geobrowsercomponent.cpp  geocomponent.cpp  geolayerscomponent.cpp
src/items/: geocolorizepathitem.cpp  geoitem.cpp  geomarkeritem.cpp  geomultipositionItem.cpp  geosectoritem.cpp  geosimplemarkeritem.cpp  geotextitem.cpp
src/tools/: geo2positionitemtool.cpp  geomeasuretool.cpp  geomultipositiontool.cpp
src/widgets/: geomapcanvas.cpp
test/GeoViewerTest/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/: mapwidget.ui
